vagrant/yamlconfig/envoy/secrettls.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: certificates
spec: {}
status: {}
---
# Create Secret for k8scalico1 TLS certs
# k create secret tls k8scalico1 --key ./k8scalico1.key --cert ./k8scalico1.crt -n certificates --dry-run=client -o yaml
