vagrant/yamlconfig/envoy/demoapphttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-httproute
  namespace: gundam
spec:
  parentRefs:
  - name: envoy-nodeport-gw
    namespace: envoytest
  hostnames:
  - "k8scalico1"
  rules:
  - backendRefs:
    - name: barbatossvc
      port: 8090
      kind: Service
  - backendRefs:
    - name: demoappsvc
      port: 8080
      kind: Service
      namespace: gundam
    matches:
    - path:
        type: PathPrefix
        value: /demoapp
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
